--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     // firebase
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
 
+    // splash screen
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
 }
