--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.example.jubgging_nav'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.jubgging_nav"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         javaCompileOptions {
@@ -67,5 +67,9 @@ dependencies {
 
     // firebase
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
+
+    // ViewModel
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
 
 }
